--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -29,6 +29,10 @@ jobs:
       - name: Git clone the repository
         uses: actions/checkout@v4
       
+      - uses: pnpm/action-setup@v4
+        with:
+          version: latest
+      
       - name: Install Cargo Zigbuild
         run: pip install cargo-zigbuild
 
