--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -48,9 +48,16 @@ jobs:
       - name: Install SST
         run: curl -fsSL https://ion.sst.dev/install | bash
 
-      - name: Set InternalSecret env
+      - name: Set SST envs
         run: |
           cd infra && sst secret list >> $GITHUB_ENV
+        env:
+          ARM_USE_OIDC: true
+          ARM_CLIENT_ID: a17b56f1-0b10-4029-9a89-7f703d3573f8
+          ARM_TENANT_ID: 22d6679c-fc23-425a-b69b-e5e604dd80db
+          AZURE_SUBSCRIPTION_ID: 22d6679c-fc23-425a-b69b-e5e604dd80db
+          OAUTH_CLIENT_ID: kXdvzkEgiN11CNTRL
+          OAUTH_CLIENT_SECRET: ${{ secrets.TAILSCALE_OAUTH_SECRET }}
 
       - name: Build & deploy binary
         env:
