--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -49,7 +49,7 @@ jobs:
 
       - name: Build & upload binary
         run: |
-          alias wrangler="pnpm dlx wrangler"
+          pnpm i -g wrangler
           export HASH=$(git rev-parse HEAD)
 
           cargo zigbuild --release --target aarch64-unknown-linux-musl -p mattrax
@@ -182,9 +182,6 @@ jobs:
       name: mattrax
       url: https://mdm.mattrax.app
     steps:
-      - name: Git clone the repository
-        uses: actions/checkout@v4
-
       - uses: pnpm/action-setup@v4
         with:
           version: latest
