deploy work finally

--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -182,6 +182,9 @@ jobs:
       name: mattrax
       url: https://mdm.mattrax.app
     steps:
+      - name: Git clone the repository
+        uses: actions/checkout@v4
+
       - uses: pnpm/action-setup@v4
         with:
           version: latest
