--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -128,6 +128,48 @@ jobs:
           name: ${{ matrix.projects }}-dist
           path: apps/${{ matrix.projects }}/dist
 
+  deploy-mattrax:
+    name: Deploy Mattrax
+    runs-on: ubuntu-latest
+    needs: [build-mattrax, sst]
+    concurrency:
+      group: mattrax
+    environment:
+      name: mattrax
+      url: https://mdm.mattrax.app
+    steps:
+      - name: Git clone the repository
+        uses: actions/checkout@v4
+
+      - uses: pnpm/action-setup@v4
+        with:
+          version: latest
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: "arn:aws:iam::101829795063:role/mattrax-gh-actions"
+          aws-region: us-east-1
+          role-session-name: mattrax-sst-workflow
+
+      - name: Install SST
+        run: curl -fsSL https://ion.sst.dev/install | bash
+
+      - name: Set SST envs
+        run: |
+          cd infra && sst secret list --stage brendonovich | grep "MDM_INTERNAL_SECRET" >> $GITHUB_ENV
+        env:
+          ARM_USE_OIDC: true
+          ARM_CLIENT_ID: a17b56f1-0b10-4029-9a89-7f703d3573f8
+          ARM_TENANT_ID: 22d6679c-fc23-425a-b69b-e5e604dd80db
+          AZURE_SUBSCRIPTION_ID: 22d6679c-fc23-425a-b69b-e5e604dd80db
+          OAUTH_CLIENT_ID: kXdvzkEgiN11CNTRL
+          OAUTH_CLIENT_SECRET: ${{ secrets.TAILSCALE_OAUTH_SECRET }}
+
+      - name: Deploy Mattrax
+        run: |
+          curl -v "https://mdm.mattrax.app/internal/redeploy?secret=${{ env.MDM_INTERNAL_SECRET }}"
+
   deploy-web:
     strategy:
       matrix:
@@ -142,7 +184,7 @@ jobs:
       # This will wait for *all* projects to build, not just the one we care about.
       # GitHub don't provide a better solution :(
       - build-web
-      - build-mattrax
+      - deploy-mattrax
     # Run regardless of if previous steps were skipped
     if: ${{ !failure() && !cancelled() }}
     environment:
@@ -171,38 +213,3 @@ jobs:
       - name: Export `DEPLOYMENT_URL`
         id: result
         run: echo "DEPLOYMENT_URL=$(grep -Eo 'https://[^ >]+' BUILD_OUTPUT|head -1)" >> $GITHUB_OUTPUT
-
-  deploy-mattrax:
-    name: Deploy Mattrax
-    runs-on: ubuntu-latest
-    needs: [build-mattrax, sst]
-    concurrency:
-      group: mattrax
-    environment:
-      name: mattrax
-      url: https://mdm.mattrax.app
-    steps:
-      - name: Git clone the repository
-        uses: actions/checkout@v4
-
-      - uses: pnpm/action-setup@v4
-        with:
-          version: latest
-
-      - name: Install SST
-        run: curl -fsSL https://ion.sst.dev/install | bash
-
-      - name: Set SST envs
-        run: |
-          cd infra && sst secret list --stage brendonovich | grep "MDM_INTERNAL_SECRET" >> $GITHUB_ENV
-        env:
-          ARM_USE_OIDC: true
-          ARM_CLIENT_ID: a17b56f1-0b10-4029-9a89-7f703d3573f8
-          ARM_TENANT_ID: 22d6679c-fc23-425a-b69b-e5e604dd80db
-          AZURE_SUBSCRIPTION_ID: 22d6679c-fc23-425a-b69b-e5e604dd80db
-          OAUTH_CLIENT_ID: kXdvzkEgiN11CNTRL
-          OAUTH_CLIENT_SECRET: ${{ secrets.TAILSCALE_OAUTH_SECRET }}
-
-      - name: Deploy Mattrax
-        run: |
-          curl -v "https://mdm.mattrax.app/internal/redeploy?secret=${{ env.MDM_INTERNAL_SECRET }}"
