Upgrade dependencies Including SS/Vinxi for massive build performance improvement.

--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -10,28 +10,28 @@
 	},
 	"browserslist": "defaults, not ie <= 11",
 	"dependencies": {
-		"@algolia/autocomplete-core": "^1.17.1",
-		"@headlessui/react": "^2.0.3",
-		"@headlessui/tailwindcss": "^0.2.0",
+		"@algolia/autocomplete-core": "^1.17.4",
+		"@headlessui/react": "^2.1.2",
+		"@headlessui/tailwindcss": "^0.2.1",
 		"@mdx-js/loader": "^3.0.1",
 		"@mdx-js/react": "^3.0.1",
-		"@next/mdx": "^14.2.3",
+		"@next/mdx": "^14.2.5",
 		"@sindresorhus/slugify": "^2.2.1",
 		"@tailwindcss/typography": "^0.5.13",
 		"@types/mdx": "^2.0.13",
-		"@types/node": "^20.12.12",
-		"@types/react": "^18.3.2",
+		"@types/node": "^20.14.11",
+		"@types/react": "^18.3.3",
 		"@types/react-dom": "^18.3.0",
 		"@types/react-highlight-words": "^0.16.7",
-		"acorn": "^8.11.3",
+		"acorn": "^8.12.1",
 		"autoprefixer": "^10.4.19",
 		"clsx": "^2.1.1",
 		"fast-glob": "^3.3.2",
 		"flexsearch": "^0.7.43",
-		"framer-motion": "^11.2.4",
+		"framer-motion": "^11.3.8",
 		"mdast-util-to-string": "^4.0.0",
 		"mdx-annotations": "^0.1.4",
-		"next": "^14.2.3",
+		"next": "^14.2.5",
 		"next-themes": "^0.3.0",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
@@ -39,18 +39,18 @@
 		"remark": "^15.0.1",
 		"remark-gfm": "^4.0.0",
 		"remark-mdx": "^3.0.1",
-		"shiki": "=0.14.7",
+		"shiki": "^0.14.7",
 		"simple-functional-loader": "^1.2.1",
-		"tailwindcss": "^3.4.3",
-		"typescript": "^5.4.5",
+		"tailwindcss": "^3.4.6",
+		"typescript": "^5.5.3",
 		"unist-util-filter": "^5.0.1",
 		"unist-util-visit": "^5.0.0",
-		"zustand": "^4.5.2"
+		"zustand": "^4.5.4"
 	},
 	"devDependencies": {
-		"eslint": "^9.2.0",
-		"eslint-config-next": "^14.2.3",
-		"prettier": "^3.2.5",
+		"eslint": "^9.7.0",
+		"eslint-config-next": "^14.2.5",
+		"prettier": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.5.14",
 		"sharp": "0.33.4"
 	}
