--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,8 +13,8 @@
 		"cbuild": "NITRO_PRESET=cloudflare_pages vinxi build"
 	},
 	"dependencies": {
-		"@corvu/otp-field": "^0.1.0",
-		"@hono/zod-validator": "^0.2.1",
+		"@corvu/otp-field": "^0.1.1",
+		"@hono/zod-validator": "^0.2.2",
 		"@kobalte/core": "^0.13.3",
 		"@kobalte/tailwindcss": "^0.9.0",
 		"@lucia-auth/adapter-drizzle": "^1.0.7",
@@ -27,90 +27,90 @@
 		"@mattrax/policy-composer": "workspace:*",
 		"@mattrax/trpc-server-function": "workspace:^",
 		"@mattrax/ui": "workspace:*",
-		"@mattrax/web": "file:./",
+		"@mattrax/web": "file:",
 		"@microsoft/microsoft-graph-client": "^3.0.7",
 		"@paralleldrive/cuid2": "^2.2.2",
 		"@planetscale/database": "^1.18.0",
 		"@simplewebauthn/browser": "^10.0.0",
 		"@simplewebauthn/server": "^10.0.0",
 		"@simplewebauthn/typescript-types": "^8.3.4",
-		"@solid-mediakit/trpc": "^3.0.2",
+		"@solid-mediakit/trpc": "^3.0.3",
 		"@solid-primitives/autofocus": "^0.0.111",
 		"@solid-primitives/context": "^0.2.3",
-		"@solid-primitives/date": "^2.0.21",
+		"@solid-primitives/date": "^2.0.22",
 		"@solid-primitives/event-bus": "^1.0.11",
 		"@solid-primitives/event-listener": "^2.3.3",
 		"@solid-primitives/lifecycle": "^0.0.102",
 		"@solid-primitives/map": "^0.4.11",
-		"@solid-primitives/memo": "^1.3.8",
+		"@solid-primitives/memo": "^1.3.9",
 		"@solid-primitives/scheduled": "^1.4.3",
-		"@solid-primitives/storage": "^3.5.0",
+		"@solid-primitives/storage": "^3.8.0",
 		"@solid-primitives/timer": "^1.3.9",
 		"@solid-primitives/websocket": "^1.2.2",
-		"@solidjs/router": "=0.13.3",
+		"@solidjs/router": "^0.13.6",
 		"@solidjs/start": "1.0.1",
 		"@t3-oss/env-core": "^0.10.1",
 		"@tanstack/solid-form": "^0.20.0",
-		"@tanstack/solid-query": "^5.36.1",
-		"@tanstack/solid-query-devtools": "^5.36.1",
-		"@tanstack/solid-query-persist-client": "^5.36.1",
-		"@tanstack/solid-table": "^8.17.3",
-		"@tanstack/solid-virtual": "^3.5.0",
-		"@tanstack/zod-form-adapter": "^0.20.0",
+		"@tanstack/solid-query": "^5.51.9",
+		"@tanstack/solid-query-devtools": "^5.51.9",
+		"@tanstack/solid-query-persist-client": "^5.51.9",
+		"@tanstack/solid-table": "^8.19.3",
+		"@tanstack/solid-virtual": "^3.8.3",
+		"@tanstack/zod-form-adapter": "^0.20.3",
 		"@trpc/client": "^10.45.2",
 		"@trpc/server": "^10.45.2",
 		"@types/pluralize": "^0.0.33",
-		"aws4fetch": "^1.0.18",
+		"aws4fetch": "^1.0.19",
 		"base58": "^2.0.1",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"codejar": "^4.2.0",
-		"cookie-es": "^1.1.0",
-		"dexie": "^4.0.4",
+		"cookie-es": "^1.2.1",
+		"dexie": "^4.0.8",
 		"drizzle-orm": "^0.30.10",
-		"h3": "^1.11.1",
-		"hono": "^4.3.7",
-		"jose": "^5.3.0",
+		"h3": "^1.12.0",
+		"hono": "^4.5.0",
+		"jose": "^5.6.3",
 		"lucia": "^3.2.0",
-		"oslo": "^1.2.0",
+		"oslo": "^1.2.1",
 		"pluralize": "^8.0.0",
-		"prism-code-editor": "^3.3.1",
+		"prism-code-editor": "^3.3.3",
 		"prism-themes": "^1.9.0",
 		"prismjs": "^1.29.0",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
-		"solid-js": "^1.8.17",
-		"solid-presence": "^0.1.6",
-		"solid-sonner": "^0.2.7",
+		"solid-js": "^1.8.18",
+		"solid-presence": "^0.1.7",
+		"solid-sonner": "^0.2.8",
 		"solid-transition-group": "^0.2.3",
-		"sst": "^3.0.32",
-		"stripe": "^15.7.0",
+		"sst": "^3.0.37",
+		"stripe": "^15.12.0",
 		"superjson": "^2.2.1",
-		"tailwindcss": "^3.4.3",
-		"ts-pattern": "^5.1.1",
-		"vinxi": "^0.3.12",
+		"tailwindcss": "^3.4.6",
+		"ts-pattern": "^5.2.0",
+		"vinxi": "^0.3.14",
 		"xml2js": "^0.6.2",
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
-		"@iconify/json": "^2.2.211",
+		"@iconify/json": "^2.2.229",
 		"@microsoft/microsoft-graph-types": "^2.40.0",
 		"@simplewebauthn/types": "^10.0.0",
 		"@tailwindcss/forms": "^0.5.7",
 		"@types/prismjs": "^1.26.4",
-		"@types/react": "^18.3.2",
+		"@types/react": "^18.3.3",
 		"@types/react-dom": "^18.3.0",
 		"autoprefixer": "^10.4.19",
-		"mysql2": "^3.9.7",
-		"postcss": "^8.4.38",
+		"mysql2": "^3.10.3",
+		"postcss": "^8.4.39",
 		"rollup-plugin-visualizer": "^5.12.0",
 		"solid-devtools": "^0.30.1",
 		"tailwind-scrollbar": "^3.1.0",
 		"tailwindcss-animate": "^1.0.7",
-		"unenv": "^1.9.0",
-		"unplugin-auto-import": "^0.17.6",
+		"unenv": "^1.10.0",
+		"unplugin-auto-import": "^0.17.8",
 		"unplugin-icons": "^0.19.0",
-		"vite": "^5.2.11",
+		"vite": "^5.3.4",
 		"vite-plugin-html": "^3.2.2",
 		"vite-plugin-solid": "^2.10.2",
 		"vite-tsconfig-paths": "^4.3.2"
