--- a/apps/landing/package.json
+++ b/apps/landing/package.json
@@ -20,14 +20,14 @@
 		"@fontsource/inter": "^5.0.19",
 		"@kobalte/core": "^0.13.3",
 		"@mattrax/ui": "workspace:*",
-		"@solidjs/router": "^0.13.6",
+		"@solidjs/router": "0.13.3",
 		"@solidjs/start": "1.0.6",
 		"@tanstack/solid-form": "^0.20.0",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"h3": "^1.12.0",
 		"solid-js": "^1.8.18",
-		"vinxi": "^0.3.14",
+		"vinxi": "0.4.1",
 		"vite": "^5.3.4",
 		"zod": "^3.23.8"
 	}
