--- a/packages/trpc-server-function/package.json
+++ b/packages/trpc-server-function/package.json
@@ -12,7 +12,7 @@
 	},
 	"dependencies": {
 		"@solid-mediakit/trpc": "^3.0.3",
-		"@solidjs/router": "^0.13.6",
+		"@solidjs/router": "0.13.3",
 		"@tanstack/query-core": "^5.51.9",
 		"@trpc/client": "^10.45.2",
 		"@trpc/server": "^10.45.2"
