--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -83,7 +83,7 @@
 		"solid-presence": "^0.1.7",
 		"solid-sonner": "^0.2.8",
 		"solid-transition-group": "^0.2.3",
-		"sst": "^3.0.37",
+		"sst": "3.0.30",
 		"stripe": "^15.12.0",
 		"superjson": "^2.2.1",
 		"tailwindcss": "^3.4.6",
