--- a/infra/package.json
+++ b/infra/package.json
@@ -8,6 +8,6 @@
 	"dependencies": {
 		"@pulumi/cloudflare": "^5.34.0",
 		"@pulumi/pulumi": "^3.125.0",
-		"sst": "=3.0.15"
+		"sst": "3.0.30"
 	}
 }
