--- a/biome.json
+++ b/biome.json
@@ -17,7 +17,8 @@
 			"apps/docs",
 			".sst",
 			"configuration-schemas/**/*.json",
-			"sst-env.d.ts"
+			"sst-env.d.ts",
+			"tsconfig.app.json"
 		]
 	},
 	"organizeImports": {
