--- a/apps/configure/tsconfig.app.json
+++ b/apps/configure/tsconfig.app.json
@@ -20,6 +20,8 @@
 
     /* Linting */
     "strict": true,
+    "strictNullChecks": true,
+		"noUncheckedIndexedAccess": true,
   },
   "include": ["src"]
 }
