configure: Search + filtering + views

--- a/apps/configure/tsconfig.app.json
+++ b/apps/configure/tsconfig.app.json
@@ -24,6 +24,7 @@
 		"noUncheckedIndexedAccess": true,
 
     "paths": {
+      "~/*": ["./src/*"],
       "~c/*": ["./src/components/*"],
     },
     "types": ["vite/client", "@mattrax/ui/types"],
