--- a/apps/configure/package.json
+++ b/apps/configure/package.json
@@ -19,7 +19,8 @@
 		"@tanstack/solid-table": "^8.19.3",
 		"clsx": "^2.1.1",
 		"idb": "^8.0.0",
-		"solid-js": "^1.8.18"
+		"solid-js": "^1.8.18",
+		"zod": "^3.23.8"
 	},
 	"devDependencies": {
 		"@iconify/json": "^2.2.229",
