--- a/apps/configure/package.json
+++ b/apps/configure/package.json
@@ -20,6 +20,7 @@
 		"clsx": "^2.1.1",
 		"idb": "^8.0.0",
 		"solid-js": "^1.8.18",
+		"solid-sonner": "^0.2.8",
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
