--- a/apps/configure/package.json
+++ b/apps/configure/package.json
@@ -13,6 +13,9 @@
 		"@mattrax/ui": "workspace:*",
 		"@solid-primitives/context": "^0.2.3",
 		"@solid-primitives/event-listener": "^2.3.3",
+		"@solid-primitives/memo": "^1.3.9",
+		"@solid-primitives/resize-observer": "^2.0.26",
+		"@solid-primitives/set": "^0.4.11",
 		"@solidjs/router": "^0.14.1",
 		"@tanstack/solid-query": "^5.51.9",
 		"@tanstack/solid-query-devtools": "^5.51.9",
