--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -21,11 +21,13 @@
 	"dependencies": {
 		"@corvu/tailwind": "^0.1.5",
 		"@kobalte/core": "^0.13.3",
+		"@solid-primitives/refs": "^1.0.8",
 		"@solidjs/router": "0.13.3",
 		"@tanstack/form-core": "^0.20.3",
 		"@tanstack/solid-form": "^0.20.0",
 		"@tanstack/solid-virtual": "^3.8.3",
 		"@tanstack/zod-form-adapter": "^0.20.3",
+		"chart.js": "^4.4.3",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"cmdk-solid": "^1.0.1",
