--- a/biome.json
+++ b/biome.json
@@ -32,7 +32,8 @@
 				"noExplicitAny": "off"
 			},
 			"style": {
-				"noNonNullAssertion": "off"
+				"noNonNullAssertion": "off",
+				"noUselessElse": "off"
 			},
 			"correctness": {
 				"useJsxKeyInIterable": "off"
