configure: sync refactor + full-sync deletion

--- a/apps/configure/tsconfig.app.json
+++ b/apps/configure/tsconfig.app.json
@@ -15,6 +15,7 @@
     "isolatedModules": true,
     "moduleDetection": "force",
     "noEmit": true,
+    "allowJs": true,
     "jsx": "preserve",
     "jsxImportSource": "solid-js",
 
