--- a/apps/configure/package.json
+++ b/apps/configure/package.json
@@ -15,6 +15,7 @@
 		"@solid-primitives/event-listener": "^2.3.3",
 		"@solid-primitives/memo": "^1.3.9",
 		"@solid-primitives/resize-observer": "^2.0.26",
+		"@solid-primitives/resource": "^0.3.0",
 		"@solid-primitives/set": "^0.4.11",
 		"@solidjs/router": "^0.14.1",
 		"@tanstack/solid-query": "^5.51.9",
