--- a/apps/configure/package.json
+++ b/apps/configure/package.json
@@ -11,6 +11,7 @@
 	"dependencies": {
 		"@kobalte/core": "^0.13.3",
 		"@mattrax/ui": "workspace:*",
+		"@solid-primitives/connectivity": "^0.3.20",
 		"@solid-primitives/context": "^0.2.3",
 		"@solid-primitives/event-listener": "^2.3.3",
 		"@solid-primitives/memo": "^1.3.9",
