--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,9 +13,9 @@
 		"cbuild": "NITRO_PRESET=cloudflare_pages vinxi build"
 	},
 	"dependencies": {
-		"@corvu/otp-field": "^0.1.1",
+		"@corvu/otp-field": "^0.1.2",
 		"@hono/zod-validator": "^0.2.2",
-		"@kobalte/core": "^0.13.3",
+		"@kobalte/core": "^0.13.4",
 		"@kobalte/tailwindcss": "^0.9.0",
 		"@lucia-auth/adapter-drizzle": "^1.0.7",
 		"@mattrax/configuration-schemas": "workspace:*",
@@ -32,7 +32,7 @@
 		"@paralleldrive/cuid2": "^2.2.2",
 		"@planetscale/database": "^1.18.0",
 		"@simplewebauthn/browser": "^10.0.0",
-		"@simplewebauthn/server": "^10.0.0",
+		"@simplewebauthn/server": "^10.0.1",
 		"@simplewebauthn/typescript-types": "^8.3.4",
 		"@solid-mediakit/trpc": "^3.0.3",
 		"@solid-primitives/autofocus": "^0.0.111",
@@ -47,16 +47,16 @@
 		"@solid-primitives/storage": "^3.8.0",
 		"@solid-primitives/timer": "^1.3.9",
 		"@solid-primitives/websocket": "^1.2.2",
-		"@solidjs/router": "0.13.3",
-		"@solidjs/start": "1.0.1",
-		"@t3-oss/env-core": "^0.10.1",
-		"@tanstack/solid-form": "^0.20.0",
-		"@tanstack/solid-query": "^5.51.9",
-		"@tanstack/solid-query-devtools": "^5.51.9",
-		"@tanstack/solid-query-persist-client": "^5.51.9",
-		"@tanstack/solid-table": "^8.19.3",
-		"@tanstack/solid-virtual": "^3.8.3",
-		"@tanstack/zod-form-adapter": "^0.20.3",
+		"@solidjs/router": "0.14.1",
+		"@solidjs/start": "1.0.6",
+		"@t3-oss/env-core": "^0.11.0",
+		"@tanstack/solid-form": "^0.26.4",
+		"@tanstack/solid-query": "^5.51.21",
+		"@tanstack/solid-query-devtools": "^5.51.21",
+		"@tanstack/solid-query-persist-client": "^5.51.21",
+		"@tanstack/solid-table": "^8.20.1",
+		"@tanstack/solid-virtual": "^3.8.4",
+		"@tanstack/zod-form-adapter": "^0.26.4",
 		"@trpc/client": "^10.45.2",
 		"@trpc/server": "^10.45.2",
 		"@types/pluralize": "^0.0.33",
@@ -65,52 +65,52 @@
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"codejar": "^4.2.0",
-		"cookie-es": "^1.2.1",
+		"cookie-es": "^1.2.2",
 		"dexie": "^4.0.8",
-		"drizzle-orm": "^0.30.10",
+		"drizzle-orm": "^0.32.1",
 		"h3": "^1.12.0",
-		"hono": "^4.5.0",
+		"hono": "^4.5.3",
 		"jose": "^5.6.3",
 		"lucia": "^3.2.0",
 		"oslo": "^1.2.1",
 		"pluralize": "^8.0.0",
-		"prism-code-editor": "^3.3.3",
+		"prism-code-editor": "3.4.0-beta.1",
 		"prism-themes": "^1.9.0",
 		"prismjs": "^1.29.0",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
-		"solid-js": "^1.8.18",
-		"solid-presence": "^0.1.7",
+		"solid-js": "^1.8.19",
+		"solid-presence": "^0.1.8",
 		"solid-sonner": "^0.2.8",
 		"solid-transition-group": "^0.2.3",
 		"sst": "3.0.30",
-		"stripe": "^15.12.0",
+		"stripe": "^16.6.0",
 		"superjson": "^2.2.1",
-		"tailwindcss": "^3.4.6",
+		"tailwindcss": "^3.4.7",
 		"ts-pattern": "^5.2.0",
 		"vinxi": "0.4.1",
 		"xml2js": "^0.6.2",
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
-		"@iconify/json": "^2.2.229",
+		"@iconify/json": "^2.2.234",
 		"@microsoft/microsoft-graph-types": "^2.40.0",
 		"@simplewebauthn/types": "^10.0.0",
 		"@tailwindcss/forms": "^0.5.7",
 		"@types/prismjs": "^1.26.4",
 		"@types/react": "^18.3.3",
 		"@types/react-dom": "^18.3.0",
-		"autoprefixer": "^10.4.19",
-		"mysql2": "^3.10.3",
-		"postcss": "^8.4.39",
+		"autoprefixer": "^10.4.20",
+		"mysql2": "^3.11.0",
+		"postcss": "^8.4.40",
 		"rollup-plugin-visualizer": "^5.12.0",
 		"solid-devtools": "^0.30.1",
 		"tailwind-scrollbar": "^3.1.0",
 		"tailwindcss-animate": "^1.0.7",
 		"unenv": "^1.10.0",
-		"unplugin-auto-import": "^0.17.8",
-		"unplugin-icons": "^0.19.0",
-		"vite": "^5.3.4",
+		"unplugin-auto-import": "^0.18.2",
+		"unplugin-icons": "^0.19.1",
+		"vite": "^5.3.5",
 		"vite-plugin-html": "^3.2.2",
 		"vite-plugin-solid": "^2.10.2",
 		"vite-tsconfig-paths": "^4.3.2"
