--- a/apps/configure/package.json
+++ b/apps/configure/package.json
@@ -9,7 +9,7 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
-		"@kobalte/core": "^0.13.3",
+		"@kobalte/core": "^0.13.4",
 		"@mattrax/ui": "workspace:*",
 		"@solid-primitives/connectivity": "^0.3.20",
 		"@solid-primitives/context": "^0.2.3",
@@ -18,24 +18,24 @@
 		"@solid-primitives/resize-observer": "^2.0.26",
 		"@solid-primitives/resource": "^0.3.0",
 		"@solid-primitives/set": "^0.4.11",
-		"@solidjs/router": "^0.14.1",
-		"@tanstack/solid-query": "^5.51.9",
-		"@tanstack/solid-query-devtools": "^5.51.9",
-		"@tanstack/solid-table": "^8.19.3",
-		"@tanstack/solid-virtual": "^3.8.3",
+		"@solidjs/router": "0.14.1",
+		"@tanstack/solid-query": "^5.51.21",
+		"@tanstack/solid-query-devtools": "^5.51.21",
+		"@tanstack/solid-table": "^8.20.1",
+		"@tanstack/solid-virtual": "^3.8.4",
 		"clsx": "^2.1.1",
 		"idb": "^8.0.0",
-		"solid-js": "^1.8.18",
+		"solid-js": "^1.8.19",
 		"solid-sonner": "^0.2.8",
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
-		"@iconify/json": "^2.2.229",
-		"autoprefixer": "^10.4.19",
-		"postcss": "^8.4.39",
-		"tailwindcss": "^3.4.6",
+		"@iconify/json": "^2.2.234",
+		"autoprefixer": "^10.4.20",
+		"postcss": "^8.4.40",
+		"tailwindcss": "^3.4.7",
 		"typescript": "^5.5.4",
-		"vite": "^5.3.4",
+		"vite": "^5.3.5",
 		"vite-plugin-html": "^3.2.2",
 		"vite-plugin-solid": "^2.10.2",
 		"vite-tsconfig-paths": "^4.3.2"
