--- a/package.json
+++ b/package.json
@@ -29,14 +29,14 @@
 		"@biomejs/biome": "^1.8.3",
 		"@solidjs/start": "1.0.6",
 		"dotenv": "^16.4.5",
-		"drizzle-kit": "^0.21.4",
+		"drizzle-kit": "^0.23.1",
 		"pg": "^8.12.0",
 		"typescript": "^5.5.4"
 	},
 	"devDependencies": {
-		"husky": "^9.1.1",
-		"nx": "19.1.1",
-		"wrangler": "^3.65.1"
+		"husky": "^9.1.4",
+		"nx": "19.5.6",
+		"wrangler": "^3.68.0"
 	},
 	"resolutions": {
 		"drizzle-orm": "^0.30.8",
@@ -46,14 +46,6 @@
 		"@solidjs/router": "0.13.3"
 	},
 	"pnpm": {
-		"patchedDependencies": {
-			"drizzle-orm@0.30.10": "patches/drizzle-orm@0.30.10.patch",
-			"@react-email/tailwind@0.0.16": "patches/@react-email__tailwind@0.0.16.patch",
-			"nitropack@2.9.6": "patches/nitropack@2.9.6.patch",
-			"@tanstack/solid-form@0.20.0": "patches/@tanstack__solid-form@0.20.0.patch",
-			"cmdk-solid@1.0.1": "patches/cmdk-solid@1.0.1.patch",
-			"@solidjs/start@1.0.6": "patches/@solidjs__start@1.0.6.patch",
-			"@solidjs/router@0.13.3": "patches/@solidjs__router@0.13.3.patch"
-		}
+		"patchedDependencies": {}
 	}
 }
