--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -44,17 +44,17 @@ jobs:
       - name: Setup Rust toolchain
         run: rustup toolchain install stable --profile minimal
 
-      - name: Install Rust target for 'aarch64-unknown-linux-musl'
-        run: rustup target add aarch64-unknown-linux-musl
+      - name: Install Rust target for 'x86_64-unknown-linux-musl'
+        run: rustup target add x86_64-unknown-linux-musl
 
       - name: Build & upload binary
         run: |
           pnpm i -g wrangler
           export HASH=$(git rev-parse HEAD)
 
-          cargo zigbuild --release --target aarch64-unknown-linux-musl -p mattrax
+          cargo zigbuild --release --target x86_64-unknown-linux-musl -p mattrax
 
-          wrangler r2 object put "static/mattrax/$HASH/aarch64-unknown-linux" --file=target/aarch64-unknown-linux-musl/release/mattrax --cache-control "public, max-age=31536000, immutable"
+          wrangler r2 object put "static/mattrax/$HASH/x86_64-unknown-linux" --file=target/x86_64-unknown-linux-musl/release/mattrax --cache-control "public, max-age=31536000, immutable"
           echo "$HASH" | wrangler r2 object put "static/nightly" --pipe
 
   sst:
@@ -147,7 +147,7 @@ jobs:
       - name: Download binary
         working-directory: ./infra/cloud
         run: |
-          wget -O mattrax "https://static.mattrax.app/mattrax/$(git rev-parse HEAD)/aarch64-unknown-linux"
+          wget -O mattrax "https://static.mattrax.app/mattrax/$(git rev-parse HEAD)/x86_64-unknown-linux"
           chmod +x mattrax
       
       - name: Deploy to Fly
