--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -151,7 +151,7 @@ jobs:
           chmod +x mattrax
       
       - name: Deploy to Fly
-        run: flyctl deploy
+        run: flyctl deploy --wait-timeout 2m
         working-directory: ./infra/cloud
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
