--- a/apps/mattrax/Cargo.toml
+++ b/apps/mattrax/Cargo.toml
@@ -15,7 +15,6 @@ serve-web = []
 
 [dependencies]
 mx-utils = { path = "../../crates/mx-utils" }
-better-acme = { path = "../../crates/better-acme" }
 ms-mde = { path = "../../crates/ms-mde" }
 mx-windows = { path = "../../crates/mx-windows" }
 mx-db = { path = "../../crates/mx-db" }
@@ -30,7 +29,7 @@ tokio = { version = "1.37.0", features = [
 clap = { version = "4.5.4", features = ["derive"] }
 axum = { version = "0.7.5", features = ["http2", "macros", "ws"] }
 axum-extra = { version = "0.9.3", features = ["cookie"] }
-rustls = "0.23.6"
+rustls = { version = "0.23.12", features = ["ring"] }
 futures-rustls = "0.26.0"
 tower = "0.4.13"
 hyper = { version = "1.3.1", features = ["http1", "http2", "server"] }
