--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -7,6 +7,7 @@
 		"jsxImportSource": "solid-js",
 		"types": ["vinxi/client", "vite/client", "@mattrax/ui/types"],
 		"moduleResolution": "Bundler",
+		"allowImportingTsExtensions": true,
 		"paths": {
 			"~/*": ["./src/*"],
 			"~c/*": ["./src/components/*"],
