--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -12,9 +12,9 @@
 			"~/*": ["./src/*"],
 			"~c/*": ["./src/components/*"],
 			"~dash/*": ["./src/app/(dash)/*"],
-			"~[orgSlug]/*": ["src/app/(dash)/[orgSlug]/*"],
-			"~[tenantSlug]": ["src/app/(dash)/[orgSlug]/t.[tenantSlug].tsx"],
-			"~[tenantSlug]/*": ["src/app/(dash)/[orgSlug]/t.[tenantSlug]/*"]
+			"~[orgSlug]/*": ["./src/app/(dash)/o.[orgSlug]/*"],
+			"~[tenantSlug]": ["./src/app/(dash)/o.[orgSlug]/t.[tenantSlug].tsx"],
+			"~[tenantSlug]/*": ["./src/app/(dash)/o.[orgSlug]/t.[tenantSlug]/*"]
 		}
 	},
 	"include": ["src/"],
