--- a/packages/email/package.json
+++ b/packages/email/package.json
@@ -6,7 +6,8 @@
 	"main": "./src/index.ts",
 	"types": "./src/index.ts",
 	"scripts": {
-		"dev": "email dev"
+		"dev": "email dev",
+		"compile": "bun run ./bin/compile.ts && pnpm -C ../.. fix"
 	},
 	"dependencies": {
 		"@react-email/components": "0.0.22",
@@ -18,6 +19,7 @@
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
+		"@types/node": "^22.1.0",
 		"@types/react": "^18.3.3"
 	}
 }
