--- a/packages/email/tsconfig.json
+++ b/packages/email/tsconfig.json
@@ -15,6 +15,6 @@
 		"composite": true,
 		"skipLibCheck": true
 	},
-	"include": ["src/", "emails/"],
+	"include": ["src/", "emails/", "bin/"],
 	"exclude": ["node_modules", "dist"]
 }
