--- a/packages/email/package.json
+++ b/packages/email/package.json
@@ -7,7 +7,7 @@
 	"types": "./src/index.ts",
 	"scripts": {
 		"dev": "email dev",
-		"compile": "bun run ./bin/compile.ts && pnpm -C ../.. fix"
+		"compile": "tsx ./bin/compile.ts && pnpm -C ../.. fix"
 	},
 	"dependencies": {
 		"@react-email/components": "0.0.22",
